--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -104,7 +104,7 @@
 box-shadow: 0 2px 0 hsla(200,9%,93%,.25);
 }
 
-.beri-1			{	margin:		15px}
+.beri-1			{	margin:		15px !important}
 .beri-2			{	margin:		30px}
 .beri--1		{	margin:		-15px}
 .beri--2		{	margin:		-30px}
@@ -141,6 +141,9 @@ box-shadow: 0 2px 0 hsla(200,9%,93%,.25);
 ========================================================================== */
 .metin-orta{text-align: center;}
 .metin-sol{text-align: left;}
+.metin-sağ{text-align: right;}
+.metin-yay{text-align: justify;}
+.metin-kesik{word-break: break-all;}
 .metin-olumlu{	color: green;}
 .metin-olumsuz{	color: gray;}
 .metin-belirsiz{color: tomato;}
