--- a/assets/css/deveb.ilkel.s3.css
+++ b/assets/css/deveb.ilkel.s3.css
@@ -1,4 +1,4 @@
-gri/* ==========================================================================
+/* ==========================================================================
 
     deveb (ilkel-sürüm 3.0)
 
@@ -25,6 +25,10 @@ gri/* ==========================================================================
   padding: 0;
   border-width:0;
 }
+body{
+	font-family: 'Roboto', sans-serif;
+    font-size: 11pt;
+}
 a{
   text-decoration: none;
 }
@@ -44,11 +48,11 @@ h1, h2, h3, h4, h5, h6{
 h1{
   font-size: 2em;
 }
-
-body{
-	font-family: 'Roboto', sans-serif;
-    font-size: 11pt;
+ul{
+  padding:0;
+  margin:0;
 }
+
 /* ==========================================================================
     RENK ÖRGÜSÜ
     Ayırt etmek için önceden belirlenmiş renk grupları.
