--- a/assets/css/deveb.ilkel.s3.css
+++ b/assets/css/deveb.ilkel.s3.css
@@ -460,9 +460,10 @@ ul[data-deveb]{
 .yay{justify-content: space-around}
 .uza{align-items: stretch}
 .başta{align-items: flex-start}
-.arada{align-items: center}
-.sonda{align-items: flex-start}
+.göbekte{align-items: center}
+.ayakta{align-items: flex-end}
 .çizgide{align-items: baseline}
+.merkezde{align-items:center; justify-content: center;}
 
 /* KAP PARÇA YÖNTEMİ */
 /* gnl, byk, ort, kçk, ufk ekran genişliklerinde parça yöntemiyle düzen oluşturma örgüsü */
