--- a/assets/css/deveb.ilkel.s3.css
+++ b/assets/css/deveb.ilkel.s3.css
@@ -50,6 +50,7 @@ h1, h2, h3, h4, h5, h6{
 h1{font-size: 2.4rem;}
 h2{font-size: 1.6rem;}
 h3{font-size: 1.2rem;}
+p{display: block; width:100%;}
 p+p{margin-top:1rem;}
 ul{
   padding:0;
