--- a/assets/css/deveb.s0.1.css
+++ b/assets/css/deveb.s0.1.css
@@ -71,33 +71,33 @@ body{
     KAP ÖRGÜSÜ
     Display:Flexbox yöntemiyle geliştirilen örgü.
 ========================================================================== */
-[data-dvb~="taşma"]{overflow: hidden;}
-[data-dvb~="kayma"]{flex-wrap: nowrap;}
+[data-deveb~="taşma"]{overflow: hidden;}
+[data-deveb~="kayma"]{flex-wrap: nowrap;}
 
-[data-dvb~="ters-dizi"]{flex-wrap: wrap-reverse;}
-[data-dvb~="ters-satır"]{flex-direction: row-reverse;}
-[data-dvb~="ters-sütun"]{flex-direction: column-reverse;}
+[data-deveb~="ters-dizi"]{flex-wrap: wrap-reverse;}
+[data-deveb~="ters-satır"]{flex-direction: row-reverse;}
+[data-deveb~="ters-sütun"]{flex-direction: column-reverse;}
 
-[data-dvb~="solda"]{justify-content: flex-start;}
-[data-dvb~="data-ortada"]{justify-content:center;}
-[data-dvb~="sağda"]{justify-content: flex-end;}
-[data-dvb~="merkezde"]{align-items:center; justify-content: center;}
-[data-dvb~="üstte"]{align-items: flex-start;}
-[data-dvb~="göbekte"]{align-items: center;}
-[data-dvb~="altta"]{align-items: flex-end;}
-[data-dvb~="üstte-ol"]{align-self: flex-end;}
-[data-dvb~="göbekte-ol"]{align-self: flex-end;}
-[data-dvb~="altta-ol"]{align-self: flex-end;}
+[data-deveb~="solda"]{justify-content: flex-start;}
+[data-deveb~="data-ortada"]{justify-content:center;}
+[data-deveb~="sağda"]{justify-content: flex-end;}
+[data-deveb~="merkezde"]{align-items:center; justify-content: center;}
+[data-deveb~="üstte"]{align-items: flex-start;}
+[data-deveb~="göbekte"]{align-items: center;}
+[data-deveb~="altta"]{align-items: flex-end;}
+[data-deveb~="üstte-ol"]{align-self: flex-end;}
+[data-deveb~="göbekte-ol"]{align-self: flex-end;}
+[data-deveb~="altta-ol"]{align-self: flex-end;}
 
-[data-dvb~="ger"]{justify-content: space-between;}
-[data-dvb~="yay"]{justify-content: space-around;}
-[data-dvb~="uza"]{align-items: stretch;}
-[data-dvb~="uzun-ol"]{align-self: stretch;}
+[data-deveb~="ger"]{justify-content: space-between;}
+[data-deveb~="yay"]{justify-content: space-around;}
+[data-deveb~="uza"]{align-items: stretch;}
+[data-deveb~="uzun-ol"]{align-self: stretch;}
 
-[data-dvb~="çizgide"]{align-items: baseline;}
-[data-dvb~="çizgide-ol"]{align-self: baseline;}
+[data-deveb~="çizgide"]{align-items: baseline;}
+[data-deveb~="çizgide-ol"]{align-self: baseline;}
 
-[data-dvb~="gizli"]{display: none !important;}
+[data-deveb~="gizli"]{display: none !important;}
 
 /* KAP ÖLÇEKLEMELER */
 /* KAP PARÇA YÖNTEMİ */
